Add support for emacs and vim keybindings
Added the function -setKeyboardHandler and ACEViewKeyboardHandlers. Had
to do it slightly different from how Themes and Modes due to how Ace
seems to be loading the keybindings (looked at how it was done in the
kitchen sink demo in the ace source).

--- a/ACEView/HTML/index.html
+++ b/ACEView/HTML/index.html
@@ -18,6 +18,8 @@
     <body>
         <div id="editor"></div>
         <script src="___ACE_VIEW_JAVASCRIPT_DIRECTORY___/ace.js" type="text/javascript" charset="utf-8"></script>
+        <script src="___ACE_VIEW_JAVASCRIPT_DIRECTORY___/keybinding-vim.js" type="text/javascript" charset="utf-8"></script>
+        <script src="___ACE_VIEW_JAVASCRIPT_DIRECTORY___/keybinding-emacs.js" type="text/javascript" charset="utf-8"></script>
         <script>
             var editor = ace.edit("editor");
             editor.commands.addCommands([{
