--- a/ACEView/HTML/index.html
+++ b/ACEView/HTML/index.html
@@ -40,6 +40,7 @@
                 }
             });
             var Range = require('ace/range').Range;
+            var Search = require('ace/search').Search;
         </script>
     </body>
 </html>
