--- a/ACEView/HTML/index.html
+++ b/ACEView/HTML/index.html
@@ -27,31 +27,9 @@
             ace.config.set("basePath", "___ACE_VIEW_JAVASCRIPT_DIRECTORY___");
             ace.require("ace/ext/language_tools");
             ace.require("ace/ext/emmet");
-            editor = ace.edit("editor");
-            editor.commands.addCommands([{
-                name: "ACEFind",
-                bindKey: {
-                    win: "Ctrl-F",
-                    mac: "Command-F"
-                },
-                exec: function(editor, line) {
-                    ACEView.showFindInterface();
-                    return false;
-                },
-                readOnly: true
-            }]);
-            editor.commands.addCommands([{
-                name: "ACEReplace",
-                bindKey: {
-                    win: "Ctrl-Shift-F",
-                    mac: "Command-Shift-F"
-                },
-                exec: function(editor, line) {
-                    ACEView.showReplaceInterface();
-                    return false;
-                },
-                readOnly: true
-            }]);
+            var editor = ace.edit("editor");
+            editor.commands.removeCommand('find');
+            editor.commands.removeCommand('replace');
             var reportChanges = true;
             editor.on('change', function(delta) {
                 if (reportChanges) {
