--- a/ACEView/HTML/index.html
+++ b/ACEView/HTML/index.html
@@ -13,6 +13,9 @@
                 bottom: 0;
                 left: 0;
             }
+            .ace_tooltip {
+                font-family: sans-serif;
+            }
             </style>
     </head>
     <body>
